[gd_scene load_steps=8 format=3 uid="uid://bcwerq1dj5jig"]

[ext_resource type="Script" uid="uid://bbktwgrqod6px" path="res://Scripts/saw.gd" id="1_4qbox"]
[ext_resource type="Texture2D" uid="uid://cf230jg281xsi" path="res://Assets/Enemies/saw.png" id="2_mk2w8"]
[ext_resource type="AudioStream" uid="uid://c76fkqbrbfipd" path="res://MusicAndSounds/SFX/saw.ogg" id="3_mk2w8"]

[sub_resource type="Animation" id="Animation_ngmcx"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_1kxu7"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.437132, 3.5, 0.5, -0.196201, 85, 0.270465, 0.216815),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ijyew"]
_data = {
&"RESET": SubResource("Animation_ngmcx"),
&"spin": SubResource("Animation_1kxu7")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mk2w8"]
radius = 197.01

[node name="Saw" type="Node2D"]
script = ExtResource("1_4qbox")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mk2w8")
hframes = 2
vframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(0, -16, -3, -9, -10, -10, -9, -3, -16, 0, -10, 3, -10, 10, -4, 9, 0, 16, 4, 9, 11, 11, 9, 3, 16, 0, 9, -3, 11, -11, 4, -9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ijyew")
}

[node name="Saw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mk2w8")

[node name="Area2D2" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_mk2w8")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
